2010-02-25  Wu Zhangjin <wuzhangjin@gmail.com>

	* config/tc-mips.c (mips_fix_loongson2f, mips_fix_loongson2f_nop,
	mips_fix_loongson2f_jump): New variables.
	(md_longopts): Add New options -mfix-loongson2f-nop/jump,
	-mno-fix-loongson2f-nop/jump.
	(md_parse_option): Initialize variables via above options.
	(options): New enums for the above options.
	(md_begin): Initialize nop_insn from LOONGSON2F_NOP_INSN.
	(fix_loongson2f, fix_loongson2f_nop, fix_loongson2f_jump):
	New functions.
	(append_insn): call fix_loongson2f().
	(mips_handle_align): Replace the implicit nops.
	* config/tc-mips.h (MAX_MEM_FOR_RS_ALIGN_CODE): Modified
	for the new mips_handle_align().
	* doc/c-mips.texi: Document the new options.

2010-02-23  Daniel Gutson  <dgutson@codesourcery.com>

	* config/tc-arm.c (do_rd_rm_rn): Added warning
	for obsolete insns.

2010-02-23  Andrew Zabolotny  <anpaza@mail.ru>

	PR binutils/11297
	* config/tc-avr.c (md_apply_fix): Handle BFD_RELOC_8.
	(avr_cons_fix_new): Handle fixups of a single byte.

2010-02-22  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	PR 9861
	* config/tc-arm.c (CPU_DEFAULT): Do not define based upon build
	compiler's predefines.

2010-02-19  Alan Modra  <amodra@gmail.com>

	* configure.tgt: Whiltespace.  Sort moxie entry.

2010-02-18  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* config/tc-arm.c (arm_convert_symbolic_attribute): Add Tag_DIV_use.
	* doc/c-arm.texi: Likewise.

2010-02-12  Daniel Gutson <dgutson@codesourcery.com>

	* config/tc-arm.c (asm_opcode): operands type
	change.
	(BAD_PC_ADDRESSING): New macro message.
	(BAD_PC_WRITEBACK): Likewise.
	(MIX_ARM_THUMB_OPERANDS): New macro.
	(operand_parse_code): Added enum values.
	(parse_operands): Added thumb/arm distinction,
	plus new enum values handling.
	(encode_arm_addr_mode_2): Validations enhanced.
	(encode_arm_addr_mode_3): Likewise.
	(do_rm_rd_rn): Likewise.
	(encode_thumb32_addr_mode): Likewise.
	(do_t_ldrex): Likewise.
	(do_t_ldst): Likewise.